--- a/.github/workflows/playwright2.yml
+++ b/.github/workflows/playwright2.yml
@@ -4,6 +4,16 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
+    inputs:
+      browser:
+        type: choice
+        description: Manual run
+        required: true
+        options:
+          - chromium
+          - firefox
+          - webkit
 jobs:
   test:
     timeout-minutes: 60
